fix: picker width overflow, add version log on launch

--- a/src/pages/bookings/index.scss
+++ b/src/pages/bookings/index.scss
@@ -180,6 +180,12 @@
   margin-bottom: 24px;
   overflow: hidden;
 
+  picker {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
   &__label {
     display: block;
     font-size: 24px;
